syntax = "proto3";
package bootstrap;
option go_package = "./protocol";

service BootstrapService {
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
}

message NodeInfo {
    string host = 1;
    uint32 port = 2;
}

message RegisterRequest {
    uint64 id = 1;
    string address = 2;
    uint32 port = 3;
}

message RegisterResponse {
    bool success = 1;
    map<uint64, NodeInfo> neighbors = 2;
}